# Squooshies

./: Cargo.toml  Dioxus.toml  LISCENCE  README.md  input.css  tailwind.config.js
public/: output.css
src/: error.rs  lib.rs  main.rs
src/app/: application.rs  format.rs  mod.rs  paths.rs  picture.rs  resize.rs  rotate.rs  sort.rs  trait.rs
src/components/: buttons.rs  checkbox.rs  file_selector.rs  mod.rs  numbers.rs  pictures.rs  selects.rs  traits.rs
