[package]
name = "picturust-dx"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.1", features = ["desktop"] }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-regular", "font-awesome-solid"] }
dioxus-logger = "0.5.1"
rayon = "1.1"
rfd = "0.14"

image = "0.25"
ravif = "0.11.8"
rgb = "0.8.44"
webp = "0.3"

[package.metadata.bundle]
name = "Sqooshies"
identifier = "com.sqooshies"
icon = []
version = "1.1.0"
authors = [
    "Alexandre Beauchamp-Thibault"
]
resources = []
copyright = "Copyright (c) 2024 Alexandre Beauchamp-Thibault. All rights reserved."
category = "Tools"
short_description = "Sqooshies is a tool for optimizing images inspired by Squoosh, but with quantity in mind."
